# dependency-manager

./: generate_toml.py  pyproject.toml  requirements.txt
scripts/: setup_env.sh
src/crimson/dependency_manager/: __init__.py
