[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crimson-dependency-manager"
version = "0.1.0"
description = "Manage pip modules dependencies."
readme = "README.md"
authors = [
  { name="Sisung Kim", email="sisung.kim1@gmail.com" },
]

classifiers = [
    "Programming Language :: Python :: 3",

    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",

    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic",
    "toml",
    "networkx",
    "matplotlib"
]
requires-python = ">=3.9"

[project.urls]
"Homepage" = "https://github.com/crimson206/dependency-manager"
"Bug Tracker" = "https://github.com/crimson206/dependency-manager/issues"
